# celery-decipher

./: LICENSE  Makefile  README.md  compose.yml  conftest.py  pyproject.toml  send_cipher.py
celery_decipher/: db.py  main.py  settings.py  tracing.py
celery_decipher/celery/: app.py  healthcheck.py  tasks.py  test_tasks.py
celery_decipher/decipher/: cipher.py  db.py  dictionary.txt  fixtures.py  models.py  routes.py  solver.py  test_cipher.py  test_db.py  test_routes.py  test_solver.py
docker/celery/: Dockerfile  supervisord.conf
docker/postgres/: 01-init.sql
docker/rabbitmq/: definitions.json  rabbitmq.conf
migrations/: V2025040601__create_source_table.sql  V2025040602__create_status_table.sql  V2025041201___create_candidates_table.sql  V2025041301___create_best_candidate_table.sql
